--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,43 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  base_title: "Ruby on Rails Tutorial Sample App"
+  layouts:
+    header:
+      logo: "Sample app"
+      home: "Home"
+      help: "Help"
+      log_in: "Log in"
+    footer:
+      about: "About"
+      contact: "Contact"
+      news: "News"
+      en: "English"
+      vi: "Vietnamese"
+      tutorial_name: "Ruby on Rails Tutorial"
+      tutor: "by Michael Hartl"
+
+  static_pages:
+    home:
+      title: "Home"
+      welcome: "Welcome to Sample App"
+      intro: "This is the home page for the Ruby on Rails Tutorial sample application."
+      signup: "Sign up now!"
+    help:
+      title: "Help"
+      welcome: "Help"
+      tutorial_help :
+        intro: "Get help on the Ruby on Rails Tutorial at the"
+        site_name: "Rails Tutorial help page"
+      app_help:
+        intro: "To get the help on this sample app, see the"
+        site_name: "Ruby on Rails Tutorial"
+    about:
+      title: "About"
+      welcome: "About"
+      intro: "The Ruby on Rails Tutorial, part of the family of tutorials, is a book to teach web development with
+              Ruby on Rails. This is the sample app for the tutorial."
+      addition_info: "See more"
+    contact:
+      title: "Contact"
+      welcome: "Contact"
+      intro: "Contact the Ruby on Rails Tutorial about the sample app at "
+      site_name: "the contact page"
