--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,3 +60,15 @@ en:
     attributes:
       user:
         password_confirmation: "Password Confirmation"
+
+  sessions:
+    destroy: "Good Bye!"
+    create:
+      failed: "Invalid Email/Password"
+    new:
+      header: "Log in"
+      title: "Log in"
+      email: "Email"
+      password: "Password"
+      invite: "Sign up now?"
+      login_btn: "Log in"
