Updating, showing and deleting users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,12 +44,30 @@ en:
 
   users:
     not_found: "User not found"
+    not_logged_in: "Please log in!"
+    update:
+      success: "Profile updated!"
+      failed: "Update failed!"
     new:
       title: "Sign up"
       header: "Sign up"
       submit: "Create my account"
       success: "Welcome to Sample App"
       failed: "Sign up failed!"
+    edit:
+      title: "Edit"
+      header: "Edit your profile"
+      submit: "Save changes"
+    index:
+      title: "All Users"
+      header: "All Users"
+    user:
+      delete: "Delete"
+      delete_confirm: "You sure?"
+    destroy:
+      success: "User deleted"
+      failed: "Failed to delete user"
+    unauthorized: "Invalid action"
 
   shared:
     error_messages:
