--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -44,12 +44,30 @@ vi:
 
   users:
     not_found: "Không tìm thấy người dùng"
+    not_logged_in: "Xin hãy đăng nhập!"
+    update:
+      success: "Cập nhật thành công rồi ạ!"
+      failed: "Thất bại rồi ạ!"
     new:
       title: "Đăng ký"
       header: "Đăng ký"
       submit: "Tạo tài khoản"
       success: "Chào mừng đến với Sample App"
       failed: "Đăng ký thất bại!"
+    edit:
+      header: "Cập nhật thông tin cá nhân"
+      title: "Cập nhật"
+      submit: "Lưu thay đổi"
+    index:
+      title: "Danh sách người dùng"
+      header: "Danh sách người dùng"
+    user:
+      delete: "Xoá"
+      delete_confirm: "Xác nhận xoá ?"
+    destroy:
+      success: "Xoá thành công"
+      failed: "Xoá thất bại"
+    unauthorized: "Oops! Bạn không được phép làm thế!"
 
   shared:
     error_messages:
