--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,3 +91,15 @@ en:
       invite: "Sign up now?"
       login_btn: "Log in"
       remember_me: "Remember me"
+
+  account_activations:
+    edit:
+      success: "Account activated"
+      failed: "Invalid link"
+
+  user_mailer:
+    account_activation:
+      subject: "Account activation"
+      greeting: "Hi"
+      body: "Welcome to the Sample App! Click on the link below to activate your account"
+      link_title: "Activate"
